--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -4,20 +4,24 @@
   <div class="col-md-4">
     <p>Guidelines for wikis</p>
     <ul>
-      <li>Remember this is a public wiki.</li>
+      <li>Make sure it rhymes.</li>
       <li>Don't use the letter "A".</li>
       <li>The incessant use of hashtags will get you banned.</li>
     </ul>
   </div>
   <div class="col-md-8">
     <%= form_for @wiki do |f| %>
-       <%= f.label :title %>
-       <%= f.text_field :title %>
-
-       <%= f.label :body %>
-       <%= f.text_area :body %>
-
-       <%= f.submit "Save" %>
-     <% end %>
+      <div class="form-group">
+        <%= f.label :title %>
+        <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :body %>
+        <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Save", class: 'btn btn-success' %>
+      </div>
+    <% end %>
   </div>
 </div>
