--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -3,7 +3,7 @@
     <%= @wiki.title %> <br>
   </h1>
   <small>
-    submitted <%= time_ago_in_words(@wiki.created_at) %> ago
+    submitted <%= time_ago_in_words(@wiki.created_at) %> ago by <%= @wiki.user %> <br>
   </small>
 </div>
 
@@ -11,9 +11,14 @@
   <div class="col-md-8">
     <p><%= @wiki.body %></p>
   </div>
+  <% if user_signed_in? %>
   <div class="col-md-4">
+    <% if policy(@wiki).update? %>
      <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
-     <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
+    <% end %>
+    <% if policy(@wiki).destroy? %>
+      <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
+    <% end %>
    </div>
-
+   <% end %>
 </div>
