--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -4,6 +4,7 @@
   <div class="col-md-8">
     <% @wikis.each do |wiki| %>
       <div class="media">
+        <% if user_signed_in? %>
         <div class="media-body">
           <% if current_user.premium? || current_user.admin? %>
             <h4 class="media-heading">
@@ -15,6 +16,7 @@
             </h4>
           <% end %>
         </div>
+        <% end %>
       </div>
     <% end %>
   </div>
