markdown syntax works

--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -9,12 +9,12 @@
     <p> Private </p>
   <% elsif %>
     <p> Public </p>
-  <% end %>  
+  <% end %>
 </div>
 
 <div class="row">
   <div class="col-md-8">
-    <p><%= @wiki.body %></p>
+    <p><%= markdown(@wiki.body) %></p>
   </div>
   <% if user_signed_in? %>
   <div class="col-md-4">
