--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -16,6 +16,9 @@
         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
       </div>
       <div class="form-group">
+
+      </div>
+      <div class="form-group">
         <% if current_user.admin? || current_user.premium? %>
           <%= f.label :private do %>
             <%= f.check_box :private %> Private wiki
