--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -4,9 +4,9 @@
    <div class="col-md-4">
      <p>Guidelines for wikis</p>
      <ul>
-       <li>Make sure it rhymes.</li>
-       <li>Don't use the letter "A".</li>
-       <li>The incessant use of hashtags will get you banned.</li>
+      <li>Make sure it rhymes.</li>
+      <li>Don't use the letter "A".</li>
+      <li>Style your Wiki with markdown!</li>
      </ul>
    </div>
 
