collabs can be added/removed seen by standard

--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -11,5 +11,9 @@
   </div>
   <div class="col-md-8">
     <%= render partial: 'form', locals: { wiki: @wiki } %>
+    <%= render partial: 'collaborators/form' %>
+  </div>
+  <div class="col-md-8">
+
   </div>
 </div>
