--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,28 +1,17 @@
-<h1>All Wikis</h1>
-
+<h1>Wikis</h1>
 <div class="row">
   <div class="col-md-8">
     <% @wikis.each do |wiki| %>
-      <div class="media">
-        <% if user_signed_in? %>
-        <div class="media-body">
-          <% if current_user.premium? || current_user.admin? %>
-            <h4 class="media-heading">
-              <%= link_to wiki.title, wiki %>
-            </h4>
-          <% elsif wiki.private == false %>
-            <h4 class="media-heading">
-              <%= link_to wiki.title, wiki %>
-            </h4>
-          <% end %>
-        </div>
+    <div class="media">
+      <div class="media-body">
+          <h4 class="media-heading">
+            <%= link_to wiki.title, wiki %>
+          </h4>
         <% end %>
       </div>
-    <% end %>
+    </div>
   </div>
   <div class="col-md-4">
-  <% if user_signed_in? %>
-    <%= link_to "New Public Wiki", new_wiki_path, class: 'btn btn-success' %>
-  <% end %>
+    <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
   </div>
 </div>
